# wavedb

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  a  a.sh
.claude/: settings.local.json
docs/: CLAUDE.md  Documentation.md  README.md  api.md  architecture.md  changelog.md  cli.md  programs.md
include/: wavedb.h
include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-function-mocker.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h
include/gmock/internal/: gmock-internal-utils.h  gmock-port.h  gmock-pp.h
include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
include/wavedb/: appender.h  connection.h  database.h  schema.h  status.h  types.h
scripts/: a  a.sh  build.sh  check.sh
src/: main.cpp
src/catalog/: catalog.cpp  catalog.h  schema.cpp  schema.h
src/cli/: cli.cpp  cli.h
src/common/: time_format.cpp  types.h
src/compression/: compression.cpp  compression.h
src/engine/: appender.cpp  appender.h  connection.cpp  connection.h  wavedb.cpp  wavedb.h
src/parser/: parser.cpp  parser.h
src/storage/: column_file.cpp  column_file.h  merge_scheduler.cpp  merge_scheduler.h  part.cpp  part.h  part_manager.cpp  part_manager.h
tests/: test_appender.cpp  test_catalog.cpp  test_common.cpp  test_engine.cpp  test_harness.h  test_projection.cpp  test_storage.cpp
tools/: reader.cpp  writer.cpp
tools/reader/: CMakeLists.txt  reader.cpp
tools/writer/: CMakeLists.txt  writer.cpp
